# myRealSenseWrapper

./: .gitignore  CMakeLists.txt  main.cpp  makefile  playRealsense.sln  playRealsense.vcxproj  playRealsense.vcxproj.filters  readme.md  realSenseWrapper.cpp  realSenseWrapper.h  realSensseWrapper.cpp  realSensseWrapper.h  realsenseadd.txt  recordVideo.cpp  recordVideo.h
x64/Release/: playRealsense.iobj  playRealsense.ipdb
x64/Release/playRealsense.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  playRealsense.lastbuildstate  playRealsense.write.1u.tlog
